@@ -59,6 +59,13 @@ ImageFilesWidget::ImageFilesWidget()
 void ImageFilesWidget::CreateReport(QSharedPointer<Book> book)
 {
     m_Book = book;
+    SetupTable();
+}
+
+void ImageFilesWidget::SetupTable(int sort_column, Qt::SortOrder sort_order)
+{
+    // m_AllImageResources must always be rebuilt on the fly because 
+    // files can be deleted and added behind the back of this Reports Widget resulting in crashes
     m_AllImageResources.clear();
     QList<ImageResource *> image_resources = m_Book->GetFolderKeeper()->GetResourceTypeList<ImageResource>(false);
     QList<SVGResource *> svg_resources = m_Book->GetFolderKeeper()->GetResourceTypeList<SVGResource>(false);
@@ -69,11 +76,7 @@ void ImageFilesWidget::CreateReport(QSharedPointer<Book> book)
     foreach(SVGResource * svg_resource, svg_resources) {
         m_AllImageResources.append(svg_resource);
     }
-    SetupTable();
-}
 
-void ImageFilesWidget::SetupTable(int sort_column, Qt::SortOrder sort_order)
-{
     m_ItemModel->clear();
     QStringList header;
     header.append(tr("Name"));
@@ -397,14 +400,6 @@ void ImageFilesWidget::Delete()
         foreach(QModelIndex index, ui.fileTree->selectionModel()->selectedRows(0)) {
             files_to_delete.append(m_ItemModel->itemFromIndex(index)->text());
         }
-    }
-    // remove the to be deleted resourcs from the list of all image resources
-    if (files_to_delete.count() <= 0) {
-      return;
-    }
-    foreach(QString filename, files_to_delete) {
-        Resource *resource = m_Book->GetFolderKeeper()->GetResourceByFilename(filename);
-        if (resource) m_AllImageResources.removeOne(resource);
     }
     emit DeleteFilesRequest(files_to_delete);
     SetupTable();
